# Kaleidoscope

./: CMakeLists.txt
header/: KaleidoscopeJIT.hpp  ast.hpp  codeGen.hpp  externFunc.hpp  lexer.hpp  logError.hpp  parser.hpp
msvc_project/: ALL_BUILD.vcxproj  CMakeCache.txt  Kaleidoscope.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  a.vcxproj  a.vcxproj.filters  cmake_install.cmake  intrinsics_gen.vcxproj  intrinsics_gen.vcxproj.filters
source/: .cpp  ast.cpp  lexer.cpp  logError.cpp  main.cpp  parser.cpp
