cmake_minimum_required( VERSION 3.11 )
project(Kaleidoscope)
set(LLVM_DIR D:/LLVM/cmake/modules/CMakeFiles)

find_package(LLVM REQUIRED CONFIG)
file(GLOB header_files header/*.hpp)
file(GLOB source_files source/*.cpp)
add_executable(a ${source_files} ${header_files})
include_directories(${LLVM_INCLUDE_DIRS} header)
add_definitions(${LLVM_DEFINITIONS})
llvm_map_components_to_libnames(llvm_libs support core irreader)
target_link_libraries(a ${llvm_libs})